# GameOfLife

./: CMakeLists.txt  README.md  customview.cpp  customview.h  fonts.qrc  game.cpp  game.h  gamecell.cpp  gamecell.h  loaddialog.cpp  loaddialog.h  loaddialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  savedialog.cpp  savedialog.h  savedialog.ui
Tests/: CMakeLists.txt  gamefixture.cpp  gamefixture.h  gameparameterized.cpp  gameparameterized.h  main.cpp  tst_game_of_life_parameterized_tests.cpp  tst_game_of_life_tests.cpp
